# scrap-thief

./: .env.sample  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
app/: helpers.py  pechinchou.py  pydantic_models.py  rabbitmq.py  settings.py
